# bara

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODOS.md  rust-toolchain.toml
.github/: dependabot.yml
crates/ara-cli/: Cargo.toml  README.md
crates/ara-cli/assets/: viewer.source-hash
crates/ara-cli/assets/viewer/: ara-viewer-105948516fb464ea.js  ara-viewer-105948516fb464ea_bg.wasm  ara-viewer-3b9263f1ff965232.js  ara-viewer-3b9263f1ff965232_bg.wasm  ara-viewer-51130cd69e178ac9.js  ara-viewer-51130cd69e178ac9_bg.wasm  ara-viewer-62519dce5f9158ba.js  ara-viewer-62519dce5f9158ba_bg.wasm  ara-viewer-76ae0d67386013a7.js  ara-viewer-76ae0d67386013a7_bg.wasm  ara-viewer-820df1b4b44e5fdd.js  ara-viewer-820df1b4b44e5fdd_bg.wasm  ara-viewer-b4a8eeb4b6f6ee44.js  ara-viewer-b4a8eeb4b6f6ee44_bg.wasm  ara-viewer-c84d7a4f013c5aa_bg.wasm  ara-viewer-c8bd0640b5e549ab.js  ara-viewer-c8bd0640b5e549ab_bg.wasm  ara-viewer-ce01bda3c7833e20.js  ara-viewer-ce01bda3c7833e20_bg.wasm  ara-viewer-e255355fec38119d.js  ara-viewer-e255355fec38119d_bg.wasm  ara-viewer-e3661327b4c13d5b.js  ara-viewer-e3661327b4c13d5b_bg.wasm  index.html  manifest.json
crates/ara-cli/src/: check.rs  main.rs
crates/ara-cli/src/serve/: assets.rs  cache.rs  hub.rs  mod.rs  watch.rs
crates/ara-cli/tests/: cli.rs
crates/ara-cli/tests/fixtures/cycle-dir/trace/: exploration_tree.yaml
crates/ara-core/: Cargo.toml  README.md
crates/ara-core/src/: claims.rs  evidence.rs  fix.rs  layout.rs  lib.rs  lint.rs  manifest.rs  paper.rs  parse.rs  report.rs  schema.rs  sections.rs
crates/ara-core/tests/: corpus_no_panic.rs  layout_integration.rs  parse_fixtures.rs
crates/ara-core/tests/fixtures/broken/: ambiguous_root.yaml  broken_claim_ref.yaml  cycle.yaml  dup_id.yaml
crates/ara-core/tests/fixtures/corpus/: SOURCE.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/: PAPER.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/evidence/: README.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/evidence/figures/: fig3_scalability.md  fig4_arch_validation.md  figb1_memory_growth.md  figure_d2_ftr_matrices.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/evidence/tables/: table1_main_results.md  table_f1_forgetting.md  table_f1a_forgetting_metaworld.md  table_f1b_forgetting_spaceinvaders.md  table_f1c_forgetting_freeway.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/logic/: claims.md  concepts.md  experiments.md  problem.md  related_work.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/logic/solution/: algorithm.md  architecture.md  constraints.md  heuristics.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/rubric/: requirements.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/src/: environment.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/src/configs/: eval_thresholds.md  model.md  training.md
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/src/execution/: cnn_encoder.py  componet.py  componet_module.py  encoder.py  metrics.py  task_manager.py  train_ppo_ale.py  train_sac_metaworld.py
crates/ara-core/tests/fixtures/corpus/paperbench/self-composing-policies/trace/: exploration_tree.html  exploration_tree.yaml
crates/ara-core/tests/fixtures/evidence/e2e-variants/evidence/: README.md
crates/ara-core/tests/fixtures/evidence/e2e-variants/evidence/figures/: f_dualext.md
crates/ara-core/tests/fixtures/evidence/e2e-variants/evidence/tables/: t_backtick.md  t_keyrefs.md
crates/ara-core/tests/fixtures/evidence/e2e-variants/logic/: claims.md  related_work.md
crates/ara-core/tests/fixtures/evidence/e2e-variants/trace/: exploration_tree.yaml
crates/ara-core/tests/fixtures/evidence/malformed/evidence/: README.md
crates/ara-core/tests/fixtures/evidence/malformed/evidence/tables/: orphan.md  present.md
crates/ara-core/tests/fixtures/evidence/malformed/logic/: claims.md
crates/ara-core/tests/fixtures/evidence/malformed/trace/: exploration_tree.yaml
crates/ara-core/tests/fixtures/official/: SOURCE.md
crates/ara-core/tests/fixtures/sections/absent/logic/: claims.md
crates/ara-core/tests/fixtures/sections/absent/trace/: exploration_tree.yaml
crates/ara-core/tests/fixtures/sections/malformed/: PAPER.md
crates/ara-core/tests/fixtures/sections/malformed/logic/: concepts.md  related_work.md
crates/ara-core/tests/fixtures/sections/malformed/trace/: exploration_tree.yaml
crates/ara-core/tests/fixtures/synthetic/: pivot_deadend.yaml  root_single.yaml
crates/ara-core/tests/snapshots/: layout_integration__positioned_minimal_manifest.snap  parse_fixtures__minimal_manifest.snap  parse_fixtures__pivot_deadend_manifest.snap  parse_fixtures__resnet_manifest.snap  parse_fixtures__self_composing_policies_manifest.snap
crates/ara-viewer/: Cargo.toml  README.md  Trunk.toml  index.html
crates/ara-viewer/public/: styles.css
crates/ara-viewer/src/: canvas.rs  deps.rs  detail.rs  filter.rs  kind.rs  lib.rs  main.rs  markdown.rs  modal.rs  panels.rs  replay.rs  scene.rs  source.rs  splitter.rs  state.rs  toolbar.rs  tree.rs
crates/ara-viewer/tests/: web.rs
crates/ara-wasm/: Cargo.toml  README.md
crates/ara-wasm/src/: lib.rs
docs/: ara-format-feedback.md  deploy.md  hub-parity.md  manifest-schema.md  real-corpus-no-panic.md  stage-0-ci-tooling.md  stage-1-core-parse-validate.md  stage-2-dag-layout.md  stage-3-svg-spike.md  stage-3-viewer.md  stage-4-serve.md  stage-5-check.md
plans/: ara-check-lint-fix-ci.md  exhibit-markdown-rendering.md  homebrew-prebuilt-binaries.md  hub-parity-full.md  issue-3-real-corpus-no-panic.md  issue-7-tree-list-mode.md  issue-9-layout-modes.md  rename-recipes-panel-to-solution-files.md  resizable-panels.md  stage-0-ci-tooling.md  stage-1-core-parse-validate.md  stage-2-dag-layout.md  stage-3-wasm-viewer.md  stage-4-serve-live-reload.md  stage-overview.md  (+1 more)
(+5 files in other folders)
