[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/EYH0602/bara"
authors = ["Yifeng He <yfhe.prsn@gmail.com>"]
homepage = "https://github.com/EYH0602/bara"
keywords = ["ara", "research", "viewer", "dag", "wasm"]
categories = ["command-line-utilities", "visualization"]

[profile.release]
opt-level = 3
lto = "thin"

# Wasm-specific release profile: maximise binary size reduction.
# Used only for the CI size-gate and release wasm builds via:
#   TRUNK_BUILD_CARGO_PROFILE=wasm-release trunk build --release
# NOT used by `trunk serve` or plain `trunk build` (dev stays on the default
# debug profile so incremental rebuilds stay fast).
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
