[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/ARA-Labs/ara-cli"
authors = ["Yifeng He <yfhe.cs@gmail.com>"]
homepage = "https://github.com/ARA-Labs/ara-cli"
keywords = ["ara", "research", "viewer", "dag", "wasm"]
categories = ["command-line-utilities", "visualization"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "ARA-Labs/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# We hand-pin every `uses:` in release.yml to a full commit SHA (matching the
# supply-chain hygiene of ci.yml). Marking `ci` as allow-dirty stops a future
# `dist generate`/`dist init` from clobbering those pins with floating tags.
allow-dirty = ["ci"]

[profile.release]
opt-level = 3
lto = "thin"

# Wasm-specific release profile: maximise binary size reduction.
# Used only for the CI size-gate and release wasm builds via:
#   TRUNK_BUILD_CARGO_PROFILE=wasm-release trunk build --release
# NOT used by `trunk serve` or plain `trunk build` (dev stays on the default
# debug profile so incremental rebuilds stay fast).
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
