[package]
name = "ara-cli"
description = "Command-line runtime for the ARA viewer: validate and serve Agent-Native Research Artifacts. Installs the `ara` binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
default-run = "ara"

# The workspace defaults `dist = false`; ara-cli opts back in so only the `ara`
# binary ships. `formula = "ara"` names the Homebrew formula after the binary
# (not the crate), so the install command is `brew install ARA-Labs/tap/ara`,
# not `.../ara-cli`.
[package.metadata.dist]
dist = true
formula = "ara"

[[bin]]
name = "ara"
path = "src/main.rs"

[dependencies]
ara-core = { path = "../ara-core", version = "0.1.5" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

# `ara serve` (Stage 4) — axum server + file-watch live reload. Native only.
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tower-http = { version = "0.7", features = ["fs", "compression-br", "compression-gzip"] }
notify-debouncer-full = "0.7"
arc-swap = "1"
bytes = "1"
# `ServiceExt::oneshot` drives a tower-http `ServeDir` for one hub `--assets`
# file request (dev-parity path); axum already pulls tower into the tree.
tower = { version = "0.5", features = ["util"] }
# Embedded viewer assets (default; `--assets <dir>` overrides at runtime).
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# HTTP-layer tests read bodies with http-body-util; `tower` (with `util` for
# `ServiceExt::oneshot`) is a normal dependency, so it isn't repeated here.
http-body-util = "0.1"
