[package]
name = "ara-core"
description = "Shared parsing, normalization, and DAG layout for the ARA viewer runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-saphyr = { version = "=0.0.29", default-features = false, features = ["deserialize"] }
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json = "1"

[features]
default = ["native"]
# Gates `parse_dir` and all `std::fs` access. `parse_sources`/normalize stay
# wasm-safe (no threads, filesystem, or `SystemTime`). `notify` file-watching
# is deferred to Stage 4; this feature carries no deps yet.
native = []
