[package]
name = "ara-core"
description = "Shared parsing, normalization, and DAG layout for the ARA viewer runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
# `cargo publish` bundles `tests/` by default. Excluding all fixtures keeps
# third-party corpus data out of the MPL-2.0 crate tarball — the CC-BY-4.0
# `corpus/` subset (attribution-required) and the MIT `official/` set. Tests
# still run from a git checkout / workspace, just not from the published crate.
exclude = ["tests/fixtures/**"]

[dependencies]
dagre-dgl-rs = "=0.1.1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = { version = "=0.0.29", default-features = false, features = ["deserialize"] }

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
serde_json = "1"
tempfile = "3"

[features]
default = ["native"]
# Gates `parse_dir` and all `std::fs` access. `parse_sources`/normalize stay
# wasm-safe (no threads, filesystem, or `SystemTime`). `notify` file-watching
# is deferred to Stage 4; this feature carries no deps yet.
native = []
