[package]
name = "ara-viewer"
description = "ARA Viewer — Leptos CSR web app for browsing ARA research manifests."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "ara-viewer"
path = "src/main.rs"

[lib]
name = "ara_viewer"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
ara-core = { path = "../ara-core", version = "0.0.5", default-features = false }
# serde_json is cross-platform: used by parse_manifest (native tests + wasm).
serde_json = "1"

# Browser-only networking deps.  Gated to wasm32 so `cargo test --workspace`
# (which builds for the native host) continues to compile without a browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen-futures = "0.4"

# wasm-bindgen-test dev-deps: gated to wasm32 so `cargo test --workspace`
# (native host build) skips them entirely.  The browser tests in
# tests/web.rs are also gated with `#![cfg(target_arch = "wasm32")]`.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "NodeList",
    "Node",
] }
