[package]
name = "ara-wasm"
description = "WebAssembly bindings for the ARA viewer browser client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
